recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:25: error: ')' expected but '}' found.
		}else{
                ^